delete feature added

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   
 }
 .background{
-    height: 1200px;
-      background-color: darkslateblue;
+    height: 1500px;
+      background-color: rgb(63, 50, 145);
         background-size: 100% 100%;
         
     }
